[package]
name = "rand-bk"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.43", features = ["derive"] }
log = "0.4.27"
shared_memory = { version = "0.12.2", default-features = false, features = [
  "log",
] }
rand = "0.9.2"
systemd-journal-logger = "2.2.2"


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
